--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
-# Most explicit routing to GCE Precise
-sudo: required
-dist: trusty
-language: C
-
-script: echo hola
+language: Objective-C
+osx_image: xcode7.3
+cache:
+  directories:
+    - $HOME/.cocoapods/repos
+install: pod setup
+script: true
