--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,3 @@
-language: objective-c
-osx_image: xcode7.3
-cache:
-  directories:
-    - $HOME/.cocoapods/repos
-install: pod setup
+language: GO
+
 script: true
