--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,2 @@
-language: objective-C
-osx_image: xcode7.3
-cache:
-  directories:
-    - $HOME/.cocoapods/repos
-install: pod setup
+language: csharp
 script: true
