--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,7 @@
-language: R
+language: OBJECTIVE-C
+osx_image: xcode7.3
+cache:
+  directories:
+    - $HOME/.cocoapods/repos
+install: pod setup
 script: true
