--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
-language: Objective-c
+language: ObjecTive-C
 osx_image: xcode7.3
 cache:
   directories:
     - $HOME/.cocoapods/repos
+    
 install: pod setup
 script: true
