--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,3 @@
-language: ObjecTive-C
-osx_image: xcode7.3
-cache:
-  directories:
-    - $HOME/.cocoapods/repos
-    
-install: pod setup
+language: Cpp
+
 script: true
