--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
-language: Cpp
-
+language: Objective-C
+osx_image: xcode7.3
+cache:
+  directories:
+    - $HOME/.cocoapods/repos
+install: pod setup
 script: true
