--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: Objective-c
-sudo: false
-script: true
+osx_image: xcode7.3
+cache:
+  directories:
+    - $HOME/.cocoapods/repos
 install: pod setup
+script: true
