--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
-language: Objective-C
-osx_image: xcode7.3
-cache:
-  directories:
-    - $HOME/.cocoapods/repos
-install: pod setup
-script: true
+language: Erlang
+
+otp_release:
+  - 18.2
+
+sudo: false
+
+install: true
+script:
+  - true
+
+notifications:
+  email: false
