--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,3 @@
-language: ERLANG
+language: PYTHON
 
-otp_release:
-  - 18.2
-
-sudo: false
-
-install: true
-script:
-  - true
-
-notifications:
-  email: false
+script: true
