--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,15 @@
-language: PYTHON
-
-script: true
+language: Ruby
+services:
+    - docker
+sudo: required
+install: true
+script:
+    - ruby -e 'sleep(5 + rand * 60)'
+env:
+  matrix:
+    - JOB=1
+    - JOB=2
+    - JOB=3
+    - JOB=4
+    - JOB=5
+    - JOB=6
