--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,8 @@
 sudo: false
-language: Ruby
-install: true
-env:
-  matrix:
-    - JOB=1
-    - JOB=2
-    - JOB=3
-    - JOB=4
-    - JOB=5
-    - JOB=6
+language:
+  node_js
+node_js:
+  - 5.7.0
+script:
+  - echo "nothing"
+  - echo "more"
