--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ env:
     - JOB=1
     - JOB=2
     - JOB=3
+notifications:
+  webhooks:
+    - http://mockbin.org/bin/4ca2320e-90e1-40fb-9959-0b593dd9113f
