--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ language:
   node_js
 node_js:
   - 5.7.0
-script:
-  - echo "nothing"
-  - echo "more"
+notifications:
+  webhooks:
+    - http://mockbin.org/bin/4ca2320e-90e1-40fb-9959-0b593dd9113f
