--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
-language: Ruby
-services:
-    - docker
-sudo: required
-install: true
 script:
-    - ruby -e 'sleep(5 + rand * 60)'
+  - echo "nothing"
+  - echo "more"
 env:
   matrix:
     - JOB=1
